--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,7 @@
   <app-sidemenu></app-sidemenu>
 
   <div id="content" role="main">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-
-        <button type="button" id="sidebarCollapse" class="btn btn-info">
-          <i class="fas fa-align-left"></i>
-          <span>Toggle Sidebar</span>
-        </button>
-
-      </div>
-    </nav>
+    <app-navbar></app-navbar>
     <router-outlet></router-outlet>
   </div>
 
