--- a/src/app/shared/layout/sidemenu/sidemenu.component.scss
+++ b/src/app/shared/layout/sidemenu/sidemenu.component.scss
@@ -1,37 +1,42 @@
 #sidebar {
-  width: 250px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  z-index: 999;
-  background: rgb(55, 58, 71);
+  /* don't forget to add all the previously mentioned styles here too */
+  background: #7386D5;
   color: #fff;
   transition: all 0.3s;
+  height: 100%;
 }
 
-#sidebar.active {
-  margin-left: -250px;
+#sidebar .sidebar-header {
+  padding: 20px;
+  background: #6d7fcc;
 }
 
-a[data-toggle="collapse"] {
-  position: relative;
+#sidebar ul.components {
+  padding: 20px 0;
+  border-bottom: 1px solid #47748b;
 }
 
-.dropdown-toggle::after {
+#sidebar ul p {
+  color: #fff;
+  padding: 10px;
+}
+
+#sidebar ul li a {
+  padding: 10px;
+  font-size: 1.1em;
   display: block;
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
+}
+#sidebar ul li a:hover {
+  color: #7386D5;
+  background: #fff;
 }
 
-@media (max-width: 768px) {
-  #sidebar {
-    margin-left: -250px;
-  }
-
-  #sidebar.active {
-    margin-left: 0;
-  }
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+  color: #fff;
+  background: #6d7fcc;
+}
+ul ul a {
+  font-size: 0.9em !important;
+  padding-left: 30px !important;
+  background: #6d7fcc;
 }
