--- a/src/app/shared/layout/sidemenu/sidemenu.component.scss
+++ b/src/app/shared/layout/sidemenu/sidemenu.component.scss
@@ -23,8 +23,11 @@
                 font-size: 1.1em;
                 display: block;
                 .icon {
-                    margin: 10px;
+                    margin: 5px;
                     font-size: 1.5em;
+                }
+                .menuText {
+                    margin: 5px;
                 }
             }
             a:hover {
