--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,26 @@
-
 .wrapper {
-  display: flex;
-  align-items: stretch;
-  width: 100%;
-  height: 100%;
-
-  #content {
-    height: 100%;
+    display: flex;
+    align-items: stretch;
     width: 100%;
-  }
+    height: 100%;
+    #content {
+        height: 100%;
+        width: 100%;
+    }
 }
-
 
 p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.1em;
-  font-weight: 300;
-  line-height: 1.7em;
-  color: #999;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
 }
 
-a, a:hover, a:focus {
-  color: inherit;
-  text-decoration: none;
-  transition: all 0.3s;
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
 }
-
