--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="wrapper">
-
-
-
+    <app-sidemenu [widthSidebar]="widthSidebar" *ngIf="!!account"></app-sidemenu>
     <div id="content" role="main">
-        <app-navbar (emitExpandSidebar)="toggleSidebar($event)"></app-navbar>
-        <app-sidemenu [widthSidebar]="widthSidebar"></app-sidemenu>
-        <router-outlet></router-outlet>
+        <app-navbar (emitExpandSidebar)="toggleSidebar($event)" *ngIf="!!account"></app-navbar>
+        <div class="container">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 
 </div>
