--- a/src/app/shared/layout/navbar/navbar.component.scss
+++ b/src/app/shared/layout/navbar/navbar.component.scss
@@ -1,18 +1,3 @@
-// .nav {
-//   background: rgb(39, 39, 39);
-//   display: flex;
-//   flex-direction: row-reverse;
-//   .login-container {
-//     float: right;
-//     padding: 6px 10px;
-//     margin-top: 8px;
-//     margin-right: 16px;
-//     color: white;
-//     font-size: 17px;
-//     border: none;
-//     cursor: pointer;
-//   }
-// }
 .Header__container {
     align-items: center;
     display: flex;
@@ -20,7 +5,7 @@
     height: 50px;
     justify-content: space-between;
     padding: 0 1em;
-    background-color: #959cb6;
+    background-color: #2b2b2b;
     color: #fff;
     color: var(--header-color-icon);
     font-size: 1em;
@@ -30,13 +15,16 @@
         display: flex;
         justify-content: space-between;
         height: 100%;
-        .CorporateLogo__ripple {
-            padding: 0 .8em;
-            width: 6em;
-            height: 2.5em;
-            background-repeat: no-repeat;
-            background-size: 100% auto;
-            background-position: 50%;
+        width: 200px;
+        img {
+            vertical-align: middle;
+            border-style: none;
+            height: 50px;
+            width: 100%;
+        }
+        .menuIcon {
+            font-size: 1.2em;
+            color: whitesmoke;
         }
     }
     .Header__left-container {
@@ -44,26 +32,6 @@
         display: flex;
         justify-content: space-between;
         height: 100%;
-        .Header__options {
-            color: #000;
-            align-items: center;
-            cursor: pointer;
-            display: flex;
-            margin-right: .8em;
-            justify-content: center;
-            color: #959cb6;
-            color: var(--header-color-icon);
-        }
-        .Header__Language {
-            padding: 9px 7px;
-            font-size: 14px;
-            font-weight: 500;
-            background-position: 50%;
-            -webkit-transition: background .4s;
-            transition: background .4s;
-            color: #959cb6;
-            color: var(--header-color-icon);
-        }
         .Avatar__container {
             align-items: center;
             cursor: pointer;
@@ -71,23 +39,18 @@
             height: 100%;
             padding: 0 .3em;
             .Avatar__company-logo {
-                width: 6em;
-                height: 2.5em;
                 background-repeat: no-repeat;
                 background-size: 100% auto;
                 background-position: 50%;
                 text-align: center;
-                margin-right: .3em;
-            }
-            .Avatar__user-image {
-                width: 2em;
-                height: 2em;
-                border-radius: 50%;
-                overflow: hidden;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                flex-wrap: wrap;
+                margin-right: 1em;
+                color: whitesmoke;
+                a {
+                    i {
+                        font-size: 1.2em;
+                        color: whitesmoke;
+                    }
+                }
             }
         }
         .Avatar__ripple {
