--- a/src/app/shared/layout/sidemenu/sidemenu.component.scss
+++ b/src/app/shared/layout/sidemenu/sidemenu.component.scss
@@ -6,10 +6,10 @@
     height: 100%;
     font-size: 12px;
     .sidebar-header {
-        // padding: 15px;
         background: #fff;
-        height: 45px;
+        height: 50px;
         text-align: center;
+        padding: 1em;
         img {
             width: 80%;
             height: 35px;
