--- a/src/app/modules/session/session.component.html
+++ b/src/app/modules/session/session.component.html
@@ -1,17 +1,21 @@
-<div id="logreg-forms">
-    <form class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
-        <div class="img-enterprise center">
-            <img src="https://www.google.de/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Empresa">
-        </div>
+<div class="loginpage">
+    {{intentos}}
+    <div id="logreg-forms">
+        <form class="form-signin">
+            <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
+            <div class="img-enterprise center">
+                <img src="./assets/images/enterpriseImage.png" alt="Empresa ">
+            </div>
 
-        <input [value]="name" type="text" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-        <input [value]="passpord" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+            <input type="text" #username name="username" placeholder="Username" class="form-control " required=" " autofocus=" ">
+            <input type="password" #password name="password" placeholder="Password" class="form-control " required=" ">
 
-        <button class="btn btn-success btn-block" (click)="validateSession()">
-      <i class="fas fa-sign-in-alt"></i> Sign in
-    </button>
-        <a href="#" id="forgot_pswd">Forgot password?</a>
-        <hr>
-    </form>
+            <button type="submit" (click)="logIn(username.value, password.value, $event)" id="login-button" class="btn btn-success btn-block">
+            Ingresar
+          </button>
+            <a href="# " id="forgot_pswd ">¿Olvidaste tu contraseña?</a>
+            <hr>
+        </form>
+    </div>
+
 </div>
