--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <div class="wrapper">
-    <app-sidemenu [widthSidebar]="widthSidebar"></app-sidemenu>
+    <app-sidemenu [widthSidebar]="widthSidebar" *ngIf="!!session"></app-sidemenu>
     <div id="content" role="main">
-        <app-navbar (emitExpandSidebar)="toggleSidebar($event)"></app-navbar>
-        <div class="container">
+        <app-navbar (emitExpandSidebar)="toggleSidebar($event)" *ngIf="!!session"> </app-navbar>
+        <div class="custom-container">
             <router-outlet></router-outlet>
         </div>
+        <!-- <div class="footer">
+            <p>hola</p>
+        </div> -->
     </div>
+
 </div>
