--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,16 @@
     align-items: stretch;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     #content {
         height: 100%;
         width: 100%;
+        overflow: hidden;
+        .custom-container {
+            overflow: auto;
+            height: 100%;
+            padding: 2em 2em 5em 2em;
+        }
     }
 }
 
