--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 /*
     ADDITIONAL DEMO STYLE, NOT IMPORTANT TO MAKE THINGS WORK BUT TO MAKE IT A BIT NICER :)
 */
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
-html, 
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+html,
 body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
+    overflow: hidden;
 }
