--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<div class="wrapper">
+<div class="wrapper" id="wrapper">
     <app-sidemenu [widthSidebar]="widthSidebar" *ngIf="!!session"></app-sidemenu>
     <div id="content" role="main">
         <app-navbar (emitExpandSidebar)="toggleSidebar($event)" *ngIf="!!session"> </app-navbar>
         <div class="custom-container">
             <router-outlet></router-outlet>
         </div>
-        <!-- <div class="footer">
-            <p>hola</p>
-        </div> -->
-    </div>
 
-</div>
+    </div>
