--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,25 @@
 */
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+html,
+body {
+    height: 100%;
+    width: 100vw;
+    font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
+    overflow: hidden;
+    margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: sans-serif;
+}
+
 html,
 body {
     height: 100%;
